# docs/swagger.json
@@ -456,6 +456,68 @@
                     }
                 }
             }
+        },
+        "/upload": {
+            "post": {
+                "description": "使用 S3 兼容对象存储上传文件，返回公开访问地址",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "upload"
+                ],
+                "summary": "上传文件",
+                "parameters": [
+                    {
+                        "type": "file",
+                        "description": "文件",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/common.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/upload.uploadResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "请求参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "未登录",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "系统错误",
+                        "schema": {
+                            "$ref": "#/definitions/common.SystemError"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -581,6 +643,19 @@
         },
         "novel.updateNovelRequest": {
             "type": "object"
+        },
+        "upload.uploadResponse": {
+            "type": "object",
+            "properties": {
+                "key": {
+                    "description": "Key 文件在 S3/对象存储桶里的对象路径，相当于存储内部的文件名",
+                    "type": "string"
+                },
+                "url": {
+                    "description": "URL 前端可以直接访问的公开地址，是用配置里的 public_base_url 加上 key 拼出来的",
+                    "type": "string"
+                }
+            }
         }
     },
     "externalDocs": {
